alignments fixed dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -76,13 +76,13 @@ body, html {
 }
 @media screen and (max-width: 768px) {
     .wrapper.content-body{
-        padding-left: 100px;
+        padding-left: 10px;
     }
    
   }
   @media screen and (max-width: 540px) {
     .wrapper.content-body{
-        padding-left: 100px;
+        padding-left: 10px;
     }
    
   }
@@ -97,7 +97,7 @@ body, html {
   .card-bg {
     background-position: right 10px bottom 5px;
     background-repeat: no-repeat;
-    background-size: 25%;
+    background-size: 30%;
     box-sizing: border-box;
   }
 
